--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "16.0.1",
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-loading-indicators": "^1.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
