--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "react-loading-indicators": "^1.0.1"
   },
   "devDependencies": {
