--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-loading-indicators": "^1.0.1"
+    "react-loading-indicators": "^1.0.1",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
